--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
   text-align: center;
+  width: 60%;
+  margin: 16px auto;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 3px #ccc;
+  padding: 16px;
+}
+
+.inputText{
+  text-align: center;
+  width: 60%;
+  margin: 16px auto;
+  padding: 2px;
 }
 
 .App-logo {
